# dragtor

./: .gitignore  README.md  catalog_inputs.yml  create_all_features.py  experiments.md  poetry_pyproject.toml  pyproject.toml  requirements.txt  run_setup.py  session_store.db  setup.sh  test_script.py  transcribe
assets/: speech_samples_sample3.txt
bckp_dragtor/: script.py
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_loading.yml
config/: data.yml  params.yml
docs/: decisions.md  ideas.md  learnings.md
docs/source/: conf.py  index.rst
dragtor/: script.py
marimo/: agent_human_itl.py  agent_marimo1.py  agent_memory.py  debug_late_chunking.py
scripts/: agent.py  basic_script.py  create_all_features.py  create_features.py  evaluate_answers.py  example_questions.json  generate_examples.py  test_script.py
src/dragtor/: __init__.py  __main__.py  audio_loader.py  cli.py  config.py  data.py  embed.py  llm.py  podcast_search.py  script.py  utils.py
src/dragtor/audio/: __init__.py  audio_diarization_utils.py  audio_loader.py  diarization.py  transcription.py
src/dragtor/data/: __init__.py  audio.py  data.py  jina.py
src/dragtor/datasets/: jina.py
src/dragtor/index/: __init__.py  chunk.py  embed.py  index.py  late_chunking.py  rerank.py  store.py
src/dragtor/llm/: __init__.py  dragtor.py  eval.py  evaluation.py  llm.py
src/dragtor/pipelines/data_loading/: nodes.py  pipeline.py
src/dragtor/pipelines/generate/: __init__.py  pipeline.py
src/dragtor/pipelines/retrieval/: pipeline.py
src/dragtor/utils/: audio_diarization_utils.py  audio_utils.py
tests/: conftest.py  test_audio_data.py  test_chunk.py  test_cli.py  test_config.py  test_data.py  test_embed.py  test_embeddings.py  test_index.py  test_llm.py  test_rerank.py  test_run.py  test_store.py
tests/assets/: test_params.yml
tests/assets/audio_transcript/: sample2.txt
tests/assets/cached/: audio_HF sample.txt  jina_test_blog.json  jina_test_blog.md
tests/assets/jina_reader/: jina_https:__test_blog.md
tests/pipelines/data_science/: test_pipeline.py
