[tool.poetry]
name = "dragtor"
version = "0.1.0"
description = "An exploration of non-GPU RAG approaches to built an RAG-Doctor"
authors = ["Mischa <mischa@dataworkz.de>"]

[tool.poetry.scripts]
dragtor = "dragtor.cli:entrypoint"

[tool.poetry.dependencies]
python = "~3.11.0"
llama-cpp-python = "^0.2.87"
chromadb = "^0.5.5"
omegaconf = "^2.3.0"
loguru = "^0.7.2"
fire = "^0.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"
debugpy = "^1.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4


[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.ruff.lint.isort]
force-sort-within-sections = true


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
