[project]
name = "dragtor"
version = "0.1.0"
description = "An exploration of non-GPU RAG approaches to built an RAG-Doctor"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "chromadb>=0.5.5",
    "omegaconf>=2.3.0",
    "loguru>=0.7.2",
    "fire>=0.6.0",
    "sentence-transformers>=3.0.1",
    "langchain-text-splitters>=0.3.0"
]

[project.scripts]
dragtor = "dragtor.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pytest>=8.3.2",
    "debugpy>=1.8.5",
]

[tool.ruff]
line-length = 100
indent-width = 4


[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.ruff.lint.isort]
force-sort-within-sections = true


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
